# CatsPlayingGenesys

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml
genesys_cats/: config.py  entry_point.py  models.py
genesys_cats/bot/: commands.py  discord_bot.py  helpers.py
genesys_cats/genesys/: core.py  datatypes.py  serde.py
genesys_cats/genesys/gm/: combat.py  common.py  dice.py  npcs.py  travel.py
genesys_cats/util/: __init__.py  catgen.py  catgen_data.py  cats.py  discord.py  image.py  rng.py  text.py
